# XML::TreePP Changes

2009/06/30 (0.38)
    * parsehttp now uses decoded_content method under LWP 5.802.
      This allows compressed content by Content-Encoding: gzip, etc.
      (thanks to cormanaz and ikegami)
      http://perlmonks.org/?node_id=774537
      http://rt.cpan.org/Public/Bug/Display.html?id=47336

2009/01/17 (0.37)
    * new option: xml_deref dereferences the numeric character references, 
      like &#xEB;, &#28450; etc. 
      Now UTF-8 flag is correctly treated. (thanks to haarg)
      http://rt.cpan.org/Public/Bug/Display.html?id=42347
    * without xml_deref option, the numeric character references between 
      U+0080 and U+00FF are not dereferenced any more.
      the numeric character references up to U+007F and the predefined 
      character entity references are still dereferenced per default.
    * supports Perl 5.8.4 which includes Encode 1.99_01. (thanks to SAPER)
      http://rt.cpan.org/Public/Bug/Display.html?id=41986

2008/10/26 (0.36)
    * supports spaces around the "=" sign in attribute (thanks to John)
      ex. <Elem Attrib = "abc" />
      http://tech.groups.yahoo.com/group/xml-treepp/message/27
    * Perl 5.10.0 has a memory leak problem on qr//
      (thanks to Marcin Guzowski)
      http://rt.perl.org/rt3/Public/Bug/Display.html?id=59516
    * Makefile.PL now calls Jcode and HTTP::Lite when needed

2008/01/05 (0.33)
    * Subversion on Google Code
      http://xml-treepp.googlecode.com/svn/trunk/XML-TreePP/
    * supports UTF-8 with BOM when parsing XML
      http://www.kawa.net/works/perl/feedpp/feedpp.html#com-2008-01-03T15:02:56Z

2007/11/11 (0.32)
    * supports invalid xml decl quoted with single quote (thanks to xatrix)
      ex. <?xml version='1.0' encoding='windows-1250'?>
      http://rt.cpan.org/Public/Bug/Display.html?id=30187

2007/09/22 (0.31)
    * "]]>" in CDATA must be separated into "<![CDATA[]]]]><![CDATA[>]]>"
      http://www.w3.org/TR/REC-xml/#sec-cdata-sect
    * utf8_flag option requires Perl 5.8.1