@@ -35,23 +35,22 @@ sub cdata_cdsect {
     my $list = shift;
     my $opt  = shift;
     my $tpp  = XML::TreePP->new( %$opt );
-	my $memo = exists $opt->{cdata_scalar_ref} ? 'cdata_scalar_ref ' : 'default ';
 
     foreach my $src ( keys %$list ) {
         my $val = $list->{$src};
         my $tree = $tpp->parse( $src );
-        ok( exists $tree->{xml}, $memo.'exists' );
+        ok( exists $tree->{xml}, 'exists' );
 
         my $cdata = $tree->{xml};
         $cdata = $$cdata if ( ref $cdata eq 'SCALAR' );
-        ok( ! ref $cdata, $memo.'invalid ref' );
-        is( $cdata, $val, $memo.$val );
+        ok( ! ref $cdata, 'invalid ref' );
+        is( $cdata, $val, $val );
 
         my $xml = $tpp->write( $tree );
         my $again = $tpp->parse( $xml );
         my $cdat2 = $again->{xml};
         $cdat2 = $$cdat2 if ( ref $cdat2 eq 'SCALAR' );
-        is( $cdat2, $cdata, $memo.'round trip' );
+        is( $cdat2, $cdata, 'round trip' );
     }
 }
 # ----------------------------------------------------------------
